fixed the img sizing issue that was breaking the footer icons spacing

--- a/about-styles.css
+++ b/about-styles.css
@@ -132,7 +132,7 @@ p {
         min-width: 800px;
         max-width: 1000px;
     }
-    img {
+    .kai-me, .gifs {
         float: left;
         padding: 1rem;
     }
